##Text encoding: utf-8

2013-02-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mesomer.cc: don't crash when a mesomery inside a reaction is
	destroyed.
	* libs/gcp/mesomery.cc: ditto.
	* libs/gcp/reactant.cc: ditto.
	* libs/gcp/reaction-step.cc: ditto.

2013-02-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-step.cc: fix crash when deleting a reactant using the
	lasso tool.

2013-02-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/grid.cc: change row before emitting the row changed signal.

2013-01-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-step.cc: do not destroy in NotifyEmpty () when empty
	and not standalone.
	* libs/gcp/mesomery.cc: do not allow destruction when inside a reaction.

2012-12-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.14.1).

2012-12-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: requires goffice-0.10 >= 0.10.0, bump version to 0.14.0.

2012-12-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: fix non bonding electon pairs in anions.

2012-12-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* README: update goffice version.
	* libs/gcp/application.cc: allow arrows outside of reaction or mesomery.
	* plugins/paint/selection/selectiontool.cc: fix reaction construction.

2012-11-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: update version to 0.13.99.

2012-11-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/selection/groupdlg.cc: fixed gcrash when ungrouping.

2012-11-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: fixed rules for mesomery.
	* plugins/paint/selection/selectiontool.cc: fixed mesomery construction.

2012-11-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/selection/group.cc: don't crash when loading a group.

2012-11-09  Jean Bréfort  <jean.brefort@normalesup.org>