@@ -4,6 +4,7 @@ Version 0.14.1
 		* Fix molecule deletion inside a mesomery.
 		* Fix reactant deletion inside a reaction.
 		* Don't crash when a mesomery inside a reaction is destroyed.
+		* Check molecule consistency when loading, avoids a stack overflow.
 	GCrystal:
 		* Fix row selection operations order in grids.
 
