@@ -1,5 +1,10 @@
 ##Text encoding: utf-8
 
+2013-02-27  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcp/mesomery.cc: remove extra white space.
+	* libs/gcp/molecule.cc: checl molecule consistency while loading, avoids
+	a stack overflow.
+
 2013-02-26  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcp/mesomer.cc: don't crash when a mesomery inside a reaction is
 	destroyed.
